# axonalGrowth

./: .coverage  .gitignore  .travis.yml  HangA.cc  Makefile  README.md  functions2d.c  functions2d.h  pyproject.toml  requirements.txt  requirements_docs.txt  runningProgram  setup.py  testing.c
.github/workflows/: pythonapp.yml
c_version/: functions2d.c  functions2d.h  newprog  testing.c
c_version/files/: A.test.50000  initparameters.txt  mtube  mtubeCoord  shortmtube  smallTubeCoord  vectorX  vectorY  velocityTime
docs/: conf.py  index.rst  installation.rst  intro.rst  module_index.rst  tutorial.rst
files/: T.test.50000
pyaxon/: __init__.py  functions.py  main.py  parameters.py  plot_npz.py
simulations/: parameters.yaml
tests/: fixtures.py  general.py  test_functions.py  test_plot_npz.py
